---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for control_flow/if_both_return.cm
input_file: test_data/control_flow/if_both_return.cm
---
Fixture: control_flow/if_both_return.cm
============================================================
Source code:
//!ASSERT BLOCK_COUNT(test): 3 // entry, then, else. NO merge block.
//!ASSERT NOT_CONTAINS: jump 3 // Should not jump to a merge block.

// Tests an `if-else` where both branches terminate with a `return`.
// No merge block should be generated.
fn test(x: felt) -> felt {
    if (x == 0) {
        return 1;
    } else {
        return 2;
    }
}

============================================================
Generated CASM:
test:
   0: 14 -4 4 _            // if [fp + -4] != 0 jmp rel test_2
   1: 12 2 _ _             // jump abs test_1
test_1:
   2: 9 1 -3 _             // Return value 0: [fp -3] = 1
   3: 11 _ _ _             // return
test_2:
   4: 9 2 -3 _             // Return value 0: [fp -3] = 2
   5: 11 _ _ _             // return
